# crapderive

./: Cargo.toml  README.md  test.asm  test.at
doc/: crapderive.adoc
doc/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc  config.adoc
src/: error.rs  interpret.rs  ir.rs  main.rs  parser.rs
src/snapshots/: asm_thing__parser__tests__program.snap
