[package]
name = "asm-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
dbg-pls = { version = "0.3.2", features = ["colors", "derive"] }
logos = "0.12.1"

[dev-dependencies]
insta = "1.14.1"
